--- a/index.html
+++ b/index.html
@@ -3,11 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="refresh" content="0;url=/https://chromewebstore.google.com/detail/%D9%85%D8%B3%D8%AA%D9%86%D8%AF%D8%A7%D8%AA-google-%D8%A8%D9%84%D8%A7-%D8%A5%D9%86%D8%AA%D8%B1%D9%86%D8%AA/ghbmnnjooekpmoecnnnilnnbdlolhkhi/reviews">
     <title>Document</title>
 </head>
 <body>
-    <p>Click here if you Have Problems <a href="https://chromewebstore.google.com/detail/%D9%85%D8%B3%D8%AA%D9%86%D8%AF%D8%A7%D8%AA-google-%D8%A8%D9%84%D8%A7-%D8%A5%D9%86%D8%AA%D8%B1%D9%86%D8%AA/ghbmnnjooekpmoecnnnilnnbdlolhkhi/reviews">..Click</a></p>
+    <p>إضغط هنا للإكمال الى الرابط <a href="https://chromewebstore.google.com/detail/%D9%85%D8%B3%D8%AA%D9%86%D8%AF%D8%A7%D8%AA-google-%D8%A8%D9%84%D8%A7-%D8%A5%D9%86%D8%AA%D8%B1%D9%86%D8%AA/ghbmnnjooekpmoecnnnilnnbdlolhkhi/reviews">..Click</a></p>
     
 </body>
 </html>
